[aliases]
make = sdist bdist_wheel

[metadata]
name = aptrepo
#version = # Set in setup.py
description = Examining & traversing APT repositories
long_description = file:README.rst
author = John Thorvald Wodder II
author_email = aptrepo@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/aptrepo

keywords =
    apt
    apt-get
    deb
    debian
    dpkg
    packaging
    ppa
    repository

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Topic :: System :: Software Distribution

[options]
packages = find:
python_requires = ~=3.4
install_requires =
    attrs            ~= 18.1
    beautifulsoup4   ~= 4.4
    # python-debian needs chardet, but it doesn't list it in its setup.py!
    chardet
    prettytable      ~= 0.7.2
    property-manager ~= 2.2
    python-debian    ~= 0.1.23
    requests         ~= 2.2

[options.extras_require]
libapt =
    python-apt
    # Note: Installing python-apt from source requires libapt-pkg-dev,
    # intltool, and <https://launchpad.net/python-distutils-extra> (which isn't
    # even on PyPI!)

[options.entry_points]
console_scripts =
    aptrepo-components  = aptrepo.commands.components:main
    aptrepo-packages    = aptrepo.commands.packages:main
    aptrepo-release     = aptrepo.commands.release:main
    aptrepo-sources     = aptrepo.commands.sources:main
    aptrepo-suites      = aptrepo.commands.suites:main
    aptrepo-translation = aptrepo.commands.translation:main
