[metadata]
name = aptrepo
version = attr:aptrepo.__version__
description = Examining & traversing APT repositories
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = aptrepo@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/aptrepo

keywords =
    apt
    apt-get
    deb
    debian
    dpkg
    packaging
    ppa
    repository

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Topic :: System :: Software Distribution

project_urls =
    Source Code = https://github.com/jwodder/aptrepo
    Bug Tracker = https://github.com/jwodder/aptrepo/issues

[options]
packages = find:
package_dir =
    =src
python_requires = ~=3.6
install_requires =
    attrs            >= 18.1
    beautifulsoup4   ~= 4.4
    # python-debian needs chardet, but it doesn't list it in its setup.py!
    chardet
    prettytable      ~= 0.7.2
    property-manager ~= 3.0
    python-debian    ~= 0.1.23
    requests         ~= 2.20

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aptrepo-components  = aptrepo.commands.components:main
    aptrepo-packages    = aptrepo.commands.packages:main
    aptrepo-release     = aptrepo.commands.release:main
    aptrepo-sources     = aptrepo.commands.sources:main
    aptrepo-suites      = aptrepo.commands.suites:main
    aptrepo-translation = aptrepo.commands.translation:main
